<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="sample.mvvm.viewmodel.ListViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_grey"
        tools:context=".view.ListActivity">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/octocat"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <RelativeLayout
            android:id="@+id/layout_search"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="?attr/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin">

            <ImageButton
                android:id="@+id/button_search"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_search_white_36dp"
                android:onClick="@{viewModel.onClickSearch}"
                app:visibility="@{viewModel.searchButtonVisibility}"
                tools:visibivity="visible" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_toStartOf="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/white"
                android:theme="@style/EditText"
                android:text="@{viewModel.username}"
                android:onEditorAction="@{viewModel.onUsernameEditorAction}"
                app:addTextChangedListener="@{viewModel.usernameChangedListener}" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_below="@id/layout_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:visibility="@{viewModel.progressVisibility}"/>

        <TextView
            android:id="@+id/text_info"
            android:layout_below="@id/layout_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            android:text="@{viewModel.infoMessage}"
            app:visibility="@{viewModel.infoTextVisibility}" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_repos"
            android:layout_below="@id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/vertical_margin_half"
            android:paddingTop="@dimen/vertical_margin_half"
            android:scrollbars="vertical"
            android:visibility="@{viewModel.recyclerViewVisibility}"
            tools:listitem="@layout/list_item" />

    </RelativeLayout>

</layout>

